feat: add new project, integrate GitHub readme API and refactor code

--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -9,3 +9,12 @@
 body {
   background: var(--background);
 }
+
+.swiper-slide {
+  height: auto !important;
+}
+
+.swiper-wrapper {
+  align-items: stretch;
+  padding-bottom: 0.8rem;
+}
